--- a/scripts/01-download_data.qmd
+++ b/scripts/01-download_data.qmd
@@ -22,6 +22,7 @@ install.packages('dplyr')
 install.packages('tidyverse')
 install.packages('janitor')
 install.packages('leaflet')
+install.packages('ggplot2')
 install.packages('knitr')
 install.packages('here')
 ```
