--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -2,11 +2,14 @@
 title: "Analysis of Major Crimes in Toronto And Suggestions on How to Protect Ourselves"
 author: "Boxuan Yi"
 date: 20 January 2024
+thanks: "Code and data in this analysis is available at: https://github.com/Elaineyi1/Sta302_Major_Crime_Indicators"
 abstract: "Safety is one of the most important factors that people consider when deciding where to live and go. This report uses data from Open Data Toronto to analyze the occurrences of various types of crimes in different regions and time of Toronto, as well as the trend over the past ten years. The result shows that Downtown Toronto and evenings & noon have a relatively high occurrences of crimes, which could be used as a suggestion on both individual and government dicision-making."
 format: pdf
+toc: true
+number-sections: true
 bibliography: references.bib
 ---
-## Introduction
+# Introduction
 On Dec 25th, 2023, the Christmas Day, a news has raised huge concerns among people — a man was seriously injured after stabbing in downtown Toronto. This was not the first such incident on that block in December; unfortunately, such distressing news has become more and more prevalent nowadays. As the pandemic comes to an end, there is a noticeable increase in people returning to the office and going out more frequently than in previous years. Naturally, public safety and private security have become particularly crucial, leading to a significant question: How can we proactively prevent such incidents from affecting ourselves and our loved ones?
 
 Major crimes statistics is an important tool for resource allocation and law enforcement strategy. It also provides the public a clear picture of the safety and helps individuals make informed decisions, influencing choices such as when to go out and where to buy a house. For this paper, I will use open-access data, titled ‘Major Crime Indicator’ from the OpenDataToronto [@rOpenDataToronto] to analyze the distribution of major crimes—classified as Assault, Break and Enter, Auto Theft, Robbery, and Theft Over—over the past ten years. My analysis will also delve into practical actions ordinary citizens and the government can do to enhance safety and efficiency.
@@ -49,19 +52,19 @@ clean_mci_data$occ_dow |> unique()
 clean_mci_data$occ_hour |> class() == "numeric"
 ```
 
-## Data
+# Data
 
-### Data Source and Software
+## Data Source and Software
 The data utilized throughout this paper, in csv format, was obtained from Toronto Police Services on the City of Toronto Open Data Website [@rOpenDataToronto], with the title “MAJOR CRIME INDICATORS”.
 
 The dataset will be processed and analyzed in R [@r] using packages Dplyr [@rDplyr], Tidyverse [@rTidyverse], Here [@rHere], Leaflet [@rLeaflet], and Janitor [@rJanitor]. Visualizations including tables and figures will be created using ggplot2 [@rGgplot2] and Knitr[@Knitr]. 
 
-### Data Collection
+## Data Collection
 The dataset contains all Major Crime Indicators occurrences by report data. The categories of major crimes are Assault, Break and Enter, Auto Theft, Robbery and Theft Over. The latest refresh was on Jan 11, 2024.
 
 There are two factors that may influence the reliability of the data. First, this dataset includes all occurrences reported to the Toronto Police Station, except those have been considered as unfounded. Second, this data is provided at the offence and victim level, so one occurrence number may have a few rows of data with different major crime indicators types used to categorize the occurrence. 
 
-### Data Analysis and Visualizations
+## Data Analysis and Visualizations
 The Major Crimes in Toronto dataset contains 27 columns and 372899 rows, including the repeated occurrences with different crime categories. All the samples of major crimes were reported from 2014 to 2023. Among 27 columns, the variables I will use are x_id, report_year, occ_year, occ_month, occ_dow (Day of the Week Offence Occurred), occ_hour, mci_category, division. I will create two more variables, division_area, which classifies 18 police divisions (including a NSA) into 6 regions of Toronto (including Other for NSA), and weekend_weekday, which indicates whether the occurrence happen on a weekday or a weekend. 
 
 ```{r}
@@ -148,15 +151,15 @@ clean_mci_data <- clean_mci_data |>
         "" ~ "Other"))
 clean_mci_data
 ```
-There are 18 police divisions, which are D11, D12, D13, D14, D22, D23, D31, D32, D33, D41, D42, D43, D51, D52, D53, D54, D55, and NSA. I put them into 6 geographical regions, Etobicoke-York, Etobicoke, North York, Scarborough, Toronto-East York, and other. 
+There are 18 police divisions, which are D11, D12, D13, D14, D22, D23, D31, D32, D33, D41, D42, D43, D51, D52, D53, D54, D55, and NSA. I put them into 6 geographical regions, Etobicoke-York, Etobicoke, North York, Scarborough, Toronto-East York, and other, as shown in Table 2.Based on Figure 2, Toronto-East York reports the highest amount of crimes, and Etobicoke-York has the lowest. North York, Scarborough, and Etobicoke-York have similar numbers, but the rate of increase in North York is higher than that observed in the other two. 
 ```{r}
 #| message: false
 #| echo: false
 #| label: tbl-division_area
 #| tbl-cap: Police divisions in 6 areas(including other)
 
-clean_mci_data%>%
-  group_by(division_area) %>%
+clean_mci_data |>
+  group_by(division_area) |>
   summarise(division = toString(unique(division))) |> kable()
 
 ```
@@ -178,8 +181,6 @@ clean_mci_data |>
        color = "Division Area")
 ```
 
-Based on Figure 2, Toronto-East York reports the highest amount of crimes, and Etobicoke-York has the lowest. North York, Scarborough, and Etobicoke-York have similar numbers, but the rate of increase in North York is higher than that observed in the other two. 
-
 ```{r}
 #| message: false
 #| echo: false
@@ -197,11 +198,12 @@ clean_mci_data |>
 Figure 3 indicates the preferred time to commit crimes. The graph reveals a higher likelihood of criminal behaviours during the evening, with occurrences steadily increasing as the night progresses towards midnight and afterwards, the occurrences decrease until six in the morning. Interestingly, there is a surprising local peak at noon, while 11:00 and 13:00 do not show a high probability.
 
 ```{r}
+#| include: false
 # Share
 ```
 
-
-## Conclusion
+\newpage
+# Conclusion
 In summary, ‘Assault’ has always ranked as the most common major crime over the past ten years. However, the difference between ‘Auto Theft’ and ‘Assault’ is shrinking, as the number of ‘Auto Theft’ is increasing rapidly. There need be more safety actions on automobiles, and people should lock the doors and not leave any packages visible through car windows to improve automobile security. Due to the difficulty to prove ‘Assault’ as a crime, installing cameras at the front door or home security systems is a good idea to provide evidence for ‘Assault’, while it can also record suspicious individuals and vehicles near one's residence. Taking proactive steps, such as responding to knocks cautiously while keeping the door locked, and refraining from touching anything until the police have inspected, is crucial for personal safety and should be instilled in children as well.
 
 The Toronto-East York region reports the highest number of crimes, with North York, Scarborough, and Etobicoke-York following. Resources and fundings allocation should have an emphasis on Toronto-East York, especially the downtown area, considering the amount of people coming to work despite not residing there. 
@@ -210,9 +212,9 @@ Focus on safety during midnight and noon hours is important too. The most common
 
 It is crucial to recognize that, though Toronto-East York records the most crimes, it also has the largest number of residents. Therefore, it could be biased to claim that Toronto-East York has the highest crime rate, or North York is getting dangerous, as North York has witnessed a growing population in recent years. Moreover, when creating this dataset, one occurrence number may have a few rows with different major crime indicators types used to categorize the occurrence. Therefore, some incidents of 'Auto Theft,' 'Robbery,' and 'Theft Over' may be potentially recorded multiple times under 'Break and Enter.' Consequently, the number of crimes classified as just ‘Break and Enter’ is overestimated, the actual number may be lower than what is shown now in the dataset.
 
-\newpage
 
-## References
+\newpage
+# References
 
 
 
