--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -80,3 +80,9 @@ https://github.com/rstudio/leaflet},
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
+
+@misc{newark2011canadian,
+  title={Why Canadian crime statistics don’t add up: Not the whole truth. The Macdonald-Laurier     Institute for Public Policy},
+  author={Newark, S},
+  year={2011}
+}
