--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -14,7 +14,7 @@ bibliography: references.bib
 # Introduction
 On Dec 25th, 2023, the Christmas Day, a news has raised huge concerns among people — a man was seriously injured after stabbing in downtown Toronto. This was not the first such incident on that block in December; unfortunately, such distressing news has become more and more prevalent nowadays. As the pandemic comes to an end, there is a noticeable increase in people returning to the office and going out more frequently than in previous years. Naturally, public safety and private security have become particularly crucial, leading to a significant question: How can we proactively prevent such incidents from affecting ourselves and our loved ones?
 
-“Crime is a complicated topic and there are few easy answers.” [@newark2011canadian] Major crimes statistics is an important tool for resource allocation and law enforcement strategy. It also provides the public a clear picture of the safety and helps individuals make informed decisions, influencing choices such as when to go out and where to buy a house. For this paper, I will use open-access data, titled ‘Major Crime Indicator’ from the OpenDataToronto [@rOpenDataToronto] to analyze the distribution of major crimes—classified as Assault, Break and Enter, Auto Theft, Robbery, and Theft Over—over the past ten years. My analysis will also delve into practical actions ordinary citizens and the government can do to enhance safety and efficiency.
+“Crime is a complicated topic and there are few easy answers [@newark2011canadian]." Major crimes statistics is an important tool for resource allocation and law enforcement strategy. It also provides the public a clear picture of the safety and helps individuals make informed decisions, influencing choices such as when to go out and where to buy a house. For this paper, I will use open-access data, titled ‘Major Crime Indicator’ from the OpenDataToronto [@rOpenDataToronto] to analyze the distribution of major crimes—classified as Assault, Break and Enter, Auto Theft, Robbery, and Theft Over—over the past ten years. My analysis will also delve into practical actions ordinary citizens and the government can do to enhance safety and efficiency.
 
 In this paper, I discuss the data in Section 2, including data source and software (Section 2.1), data collection (Section 2.2), data analysis and visualizations (Section 2.3). In Section 3, I conclude that Toronto-East York & evening and noon experience the highest numbers of crimes. Among the five major crime categories as mentioned, 'Assault' records the highest count, with 'Break and Enter' and 'Auto Theft' following closely.
 
@@ -59,15 +59,15 @@ clean_mci_data$occ_hour |> class() == "numeric"
 ## Data Source and Software
 The data utilized throughout this paper, in csv format, was obtained from Toronto Police Services on the City of Toronto Open Data Website [@rOpenDataToronto], with the title “MAJOR CRIME INDICATORS”.
 
-The dataset will be processed and analyzed in R [@r] using packages Dplyr [@rDplyr], Tidyverse [@rTidyverse], Here [@rHere], Leaflet [@rLeaflet], and Janitor [@rJanitor]. Visualizations including tables and figures will be created using ggplot2 [@rGgplot2] and Knitr[@Knitr]. 
+The dataset will be processed and analyzed in R [@r] using packages Dplyr [@rDplyr], Tidyverse [@rTidyverse], Here [@rHere], Leaflet [@rLeaflet], and Janitor [@rJanitor]. Visualizations including tables and figures will be created using ggplot2 [@rGgplot2] and Knitr[@rKnitr]. 
 
 ## Data Collection
 The dataset contains all Major Crime Indicators occurrences by report date. The categories of major crimes are Assault, Break and Enter, Auto Theft, Robbery and Theft Over. The latest refresh was on Jan 11, 2024.
 
 There are two factors that may influence the reliability of the data. First, this dataset includes all occurrences reported to the Toronto Police Station, except those have been considered as unfounded. Second, this data is provided at the offence and victim level, so one occurrence number may have a few rows of data with different major crime indicators types used to categorize the occurrence. 
 
-## Data Analysis and Visualizations
-The Major Crimes in Toronto dataset contains 27 columns and 372899 rows, including the repeated occurrences with different crime categories. All the samples of major crimes were reported from 2014 to 2023, and each sample includes ID, report time, occurrence time, police division, location type,  neighbourhood, and premise type. Among 27 columns, the variables I will use are x_id, report_year, occ_year, occ_month, occ_dow (day of the week offence occurred), occ_hour, mci_category and division. I will create two more variables, division_area, which put 18 police divisions (including a NSA) into 6 regions of Toronto (including Other for NSA), and weekend_weekday, which indicates whether the occurrence happen on a weekday or a weekend.  
+## Data Visualizations and Analysis 
+The Major Crimes in Toronto dataset contains 27 columns and 372899 rows, including the repeated occurrences with different crime categories. All the samples of major crimes were reported from 2014 to 2023, and each sample includes ID, report time, occurrence time, police division, location type,  neighbourhood, and premise type. Among 27 columns, the variables I will use are x_id, report_year, occ_year, occ_month, occ_dow (day of the week offence occurred), occ_hour, mci_category and division. I will create two more variables, division_area, which put 18 police divisions (including a NSA) into 6 regions of Toronto (including Other for NSA), and weekend_weekday, which indicates whether the occurrence happen on a weekday or a weekend.
 
 ```{r}
 #| message: false
@@ -91,7 +91,7 @@ clean_mci_data |>
     booktabs = TRUE
   )
 ```
-Table 1 @ref(tbl-clean_mci_data) provides a brief summary of the total number of crimes from 2014 to 2023. Over this period, the overall number of crimes shows a consistent increase, except for the years 2020 and 2021, which have a decline probably due to the impact of the pandemic. However, in 2022 and 2023, there is a significant increase by more than 6000. In each year, the month with the highest number of crimes tends to be either July, August, or October, concentrating primarily in the summer-fall period. 
+@tbl-clean_mci_data provides a brief summary of the total number of crimes from 2014 to 2023. Over this period, the overall number of crimes shows a consistent increase, except for the years 2020 and 2021, which have a decline probably due to the impact of the pandemic. However, in 2022 and 2023, there is a significant increase by more than 6000. In each year, the month with the highest number of crimes tends to be either July, August, or October, concentrating primarily in the summer-fall period. 
 
 ```{r}
 #| message: false
@@ -107,7 +107,7 @@ clean_mci_data |>
 ```
 Factors contributing to this uptrend are multifaceted, ranging from societal shifts associated with the pandemic to economic uncertainties. In particular, I will discuss the distribution of crimes from three aspects: types of crime, regions and time in a day. 
 
-Figure 1 @ref(fig-types_of_crimes) visualizes the annual distribution of major crime types with five categories: Assault, Break and Enter, Auto Theft, Robbery, and Theft Over. Across all years, 'Assault' records the highest count, followed by 'Break and Enter' and 'Auto Theft'. 'Robbery' and 'Theft Over' show comparatively lower numbers. Notably, there has been a slight decrease in “Break and Enter” since the pandemic, and an obvious increase in 'Auto Theft' during 2022 and 2023, leading ‘Auto Theft’ surpassing the number of 'Break and Enter’.
+@fig-types_of_crimes visualizes the annual distribution of major crime types with five categories: Assault, Break and Enter, Auto Theft, Robbery, and Theft Over. Across all years, 'Assault' records the highest count, followed by 'Break and Enter' and 'Auto Theft'. 'Robbery' and 'Theft Over' show comparatively lower numbers. Notably, there has been a slight decrease in “Break and Enter” since the pandemic, and an obvious increase in 'Auto Theft' during 2022 and 2023, leading ‘Auto Theft’ surpassing the number of 'Break and Enter’.
 
 ```{r}
 #| include: false
@@ -153,7 +153,7 @@ clean_mci_data <- clean_mci_data |>
         "" ~ "Other"))
 clean_mci_data
 ```
-There are 18 police divisions, which are D11, D12, D13, D14, D22, D23, D31, D32, D33, D41, D42, D43, D51, D52, D53, D54, D55, and NSA. I put them into 6 geographical regions, Etobicoke-York, Etobicoke, North York, Scarborough, Toronto-East York, and other as shown in Table 2 @ref(tbl-division_area). Based on Figure 2 @ref(fig-area_of_crimes), Toronto-East York reports the highest amount of crimes, and Etobicoke-York has the lowest. North York, Scarborough, and Etobicoke-York have similar numbers, but the rate of increase in North York is higher than that observed in the other two. It is crucial to recognize that, though Toronto-East York records the most crimes, it also has the largest number of residents. Therefore, it could be biased to claim that Toronto-East York has the highest crime rate, or North York is getting dangerous, as North York has witnessed a growing population in recent years. Moreover, when creating this dataset, one occurrence number may have a few rows with different major crime indicators types used to categorize the occurrence. Therefore, some incidents of 'Auto Theft,' 'Robbery,' and 'Theft Over' may be potentially recorded multiple times under 'Break and Enter.' Consequently, the number of crimes classified as just ‘Break and Enter’ is overestimated, the actual number may be lower than what is shown now in the dataset.
+There are 18 police divisions, which are D11, D12, D13, D14, D22, D23, D31, D32, D33, D41, D42, D43, D51, D52, D53, D54, D55, and NSA. I put them into 6 geographical regions, Etobicoke-York, Etobicoke, North York, Scarborough, Toronto-East York, and other as shown in @tbl-division_area. Based on @fig-area_of_crimes, Toronto-East York reports the highest amount of crimes, and Etobicoke-York has the lowest. North York, Scarborough, and Etobicoke-York have similar numbers, but the rate of increase in North York is higher than that observed in the other two. It is crucial to recognize that, though Toronto-East York records the most crimes, it also has the largest number of residents. Therefore, it could be biased to claim that Toronto-East York has the highest crime rate, or North York is getting dangerous, as North York has witnessed a growing population in recent years. Moreover, when creating this dataset, one occurrence number may have a few rows with different major crime indicators types used to categorize the occurrence. Therefore, some incidents of 'Auto Theft,' 'Robbery,' and 'Theft Over' may be potentially recorded multiple times under 'Break and Enter.' Consequently, the number of crimes classified as just ‘Break and Enter’ is overestimated, the actual number may be lower than what is shown now in the dataset.
 ```{r}
 #| message: false
 #| echo: false
@@ -200,7 +200,7 @@ clean_mci_data |>
   scale_x_continuous(breaks = seq(0, 23, by = 1))
 ```
 
-Figure 3 @ref(fig-time_of_crimes) indicates the preferred time to commit crimes. The graph reveals a higher likelihood of criminal behaviours during the evening, with occurrences steadily increasing as the night progresses towards midnight and afterwards, the occurrences decrease until six in the morning. Interestingly, there is a surprising local peak at noon, while 11:00 and 13:00 do not show a high probability.
+@fig-time_of_crimes indicates the preferred time to commit crimes. The graph reveals a higher likelihood of criminal behaviours during the evening, with occurrences steadily increasing as the night progresses towards midnight and afterwards, the occurrences decrease until six in the morning. Interestingly, there is a surprising local peak at noon, while 11:00 and 13:00 do not show a high probability. 
 
 The dataset named “Police Annual Statistical Report - Reported Crimes” from OpenDataToronto also provided crime data, including crime id, report_year, division, category, subtype and count. However, it overlaps with the information available in “Major Crime Indicators” dataset. Given that “Major Crime Indicators” contains more detailed records, I only used “Major Crime Indicators” in this paper.
 
