--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -12,9 +12,9 @@ bibliography: references.bib
 
 \newpage
 # Introduction
-On Dec 25th, 2023, the Christmas Day, a news has raised huge concerns among people — a man was seriously injured after stabbing in downtown Toronto. This was not the first such incident on that block in December; unfortunately, such distressing news has become more and more prevalent nowadays. As the pandemic comes to an end, there is a noticeable increase in people returning to the office and going out more frequently than in previous years. Naturally, public safety and private security have become particularly crucial, leading to a significant question: How can we proactively prevent such incidents from affecting ourselves and our loved ones?
+On December 25th, 2023, Christmas Day, an incident raised significant concerns among people — a man was seriously injured after a stabbing in downtown Toronto. This was not the first occurrence on that block in December; Unfortunately, such distressing news has become increasingly prevalent nowadays. As the pandemic comes to an end, there is a noticeable increase in people returning to the office and engaging in more regular social activities compared to previous years. Naturally, public and personal safety has become particularly crucial, leading to a significant question: How can we proactively prevent such incidents from affecting ourselves and our loved ones?
 
-“Crime is a complicated topic and there are few easy answers [@newark2011canadian]." Major crimes statistics is an important tool for resource allocation and law enforcement strategy. It also provides the public a clear picture of the safety and helps individuals make informed decisions, influencing choices such as when to go out and where to buy a house. For this paper, I will use open-access data, titled ‘Major Crime Indicator’ from the OpenDataToronto [@rOpenDataToronto] to analyze the distribution of major crimes—classified as Assault, Break and Enter, Auto Theft, Robbery, and Theft Over—over the past ten years. My analysis will also delve into practical actions ordinary citizens and the government can do to enhance safety and efficiency.
+“Crime is a complicated topic and there are few easy answers [@newark2011canadian]." Major crimes statistics is an important tool for resource allocation and law enforcement strategy. It also provides the public a clear picture of the safety and empowers individuals to make informed decisions, influencing choices such as when to go out and where to buy a house. For this paper, I will use open-access data, titled ‘Major Crime Indicator’ from the OpenDataToronto [@rOpenDataToronto] to analyze the distribution of major crimes—classified as Assault, Break and Enter, Auto Theft, Robbery, and Theft Over—over the past ten years. My analysis will also delve into practical actions ordinary citizens and the government can do to enhance safety and efficiency.
 
 In this paper, I discuss the data in Section 2, including data source and software (Section 2.1), data collection (Section 2.2), data analysis and visualizations (Section 2.3). In Section 3, I conclude that Toronto-East York & evening and noon experience the highest numbers of crimes. Among the five major crime categories as mentioned, 'Assault' records the highest count, with 'Break and Enter' and 'Auto Theft' following closely.
 
@@ -64,10 +64,10 @@ The dataset will be processed and analyzed in R [@r] using packages Dplyr [@rDpl
 ## Data Collection
 The dataset contains all Major Crime Indicators occurrences by report date. The categories of major crimes are Assault, Break and Enter, Auto Theft, Robbery and Theft Over. The latest refresh was on Jan 11, 2024.
 
-There are two factors that may influence the reliability of the data. First, this dataset includes all occurrences reported to the Toronto Police Station, except those have been considered as unfounded. Second, this data is provided at the offence and victim level, so one occurrence number may have a few rows of data with different major crime indicators types used to categorize the occurrence. 
+There are two factors that may influence the reliability of the data. First, this dataset includes all occurrences reported to the Toronto Police Station, except those that have been considered as unfounded. Second, this data is provided at the offence and victim level, so one occurrence number may have a few rows of data with different major crime indicator types used to categorize the occurrence. 
 
 ## Data Visualizations and Analysis 
-The Major Crimes in Toronto dataset contains 27 columns and 372899 rows, including the repeated occurrences with different crime categories. All the samples of major crimes were reported from 2014 to 2023, and each sample includes ID, report time, occurrence time, police division, location type,  neighbourhood, and premise type. Among 27 columns, the variables I will use are x_id, report_year, occ_year, occ_month, occ_dow (day of the week offence occurred), occ_hour, mci_category and division. I will create two more variables, division_area, which put 18 police divisions (including a NSA) into 6 regions of Toronto (including Other for NSA), and weekend_weekday, which indicates whether the occurrence happen on a weekday or a weekend.
+The Major Crimes in Toronto dataset contains 27 columns and 372899 rows, including the repeated occurrences with different crime categories. All major crime samples were reported between 2014 and 2023, and each sample includes ID, report time, occurrence time, police division, location type,  neighbourhood, and premise type. Among 27 columns, the variables I will use are x_id, report_year, occ_year, occ_month, occ_dow (day of the week offence occurred), occ_hour, mci_category and division. I will create two more variables, division_area, which puts 18 police divisions (including a NSA) into 6 regions of Toronto (including Other for NSA), and weekend_weekday, which indicates whether the occurrence happened on a weekday or a weekend.
 
 ```{r}
 #| message: false
@@ -156,7 +156,7 @@ clean_mci_data <- clean_mci_data |>
         "" ~ "Other"))
 clean_mci_data
 ```
-There are 18 police divisions, which are D11, D12, D13, D14, D22, D23, D31, D32, D33, D41, D42, D43, D51, D52, D53, D54, D55, and NSA. I put them into 6 geographical regions, Etobicoke-York, Etobicoke, North York, Scarborough, Toronto-East York and other, as shown in @tbl-division_area. Based on @fig-area_of_crimes, Toronto-East York reports the highest amount of crimes, and Etobicoke-York has the lowest. North York, Scarborough, and Etobicoke-York have similar numbers, but the rate of increase in North York is higher than that observed in the other two. It is crucial to recognize that, though Toronto-East York records the most crimes, it also has the largest number of residents. Therefore, it could be biased to claim that Toronto-East York has the highest crime rate, or North York is getting dangerous, as North York has witnessed a growing population in recent years. Moreover, when creating this dataset, one occurrence number may have a few rows with different major crime indicators types used to categorize the occurrence. Therefore, some incidents of 'Auto Theft,' 'Robbery,' and 'Theft Over' may be potentially recorded multiple times under 'Break and Enter.' Consequently, the number of crimes classified as just ‘Break and Enter’ is overestimated, the actual number may be lower than what is shown now in the dataset.
+There are 18 police divisions, which are D11, D12, D13, D14, D22, D23, D31, D32, D33, D41, D42, D43, D51, D52, D53, D54, D55, and NSA. I have grouped them into six geographical regions, Etobicoke-York, Etobicoke, North York, Scarborough, Toronto-East York and other, as illustrated in @tbl-division_area. Based on @fig-area_of_crimes, Toronto-East York reports the highest amount of crimes, and Etobicoke-York has the lowest. North York, Scarborough, and Etobicoke-York have similar numbers, but the rate of increase in North York is higher than that observed in the other two. It is crucial to recognize that, though Toronto-East York records the most crimes, it also has the largest number of residents. Therefore, asserting that Toronto-East York has the highest number or that North York is becoming more dangerous might be biased, as North York has witnessed a growing population in recent years. Moreover, when creating this dataset, one occurrence number may have a few rows with different major crime indicators types used to categorize the occurrence. Therefore, some incidents of 'Auto Theft,' 'Robbery,' and 'Theft Over' may be potentially recorded multiple times under 'Break and Enter.' Consequently, the number of crimes classified as just ‘Break and Enter’ is overestimated, the actual number may be lower than what is shown now in the dataset.
 ```{r}
 #| message: false
 #| echo: false
@@ -205,9 +205,9 @@ clean_mci_data |>
   scale_x_continuous(breaks = seq(0, 23, by = 1))
 ```
 
-@fig-time_of_crimes indicates the preferred time to commit crimes. The graph reveals a higher likelihood of criminal behaviours during the evening, with occurrences steadily increasing as the night progresses towards midnight and afterwards, the occurrences decrease until six in the morning. Interestingly, there is a surprising local peak at noon, while 11:00 and 13:00 do not show a high probability. 
+@fig-time_of_crimes indicates the preferred time to commit crimes. The graph reveals a higher likelihood of criminal behaviours during the evening, with occurrences steadily increasing as the night progresses towards midnight. Afterwards, the occurrences decrease until six in the morning. Interestingly, there is a surprising local peak at noon, while 11:00 and 13:00 do not show a high number. 
 
-The dataset named “Police Annual Statistical Report - Reported Crimes” from OpenDataToronto also provided crime data, including crime id, report_year, division, category, subtype and count. However, it overlaps with the information available in “Major Crime Indicators” dataset. Given that “Major Crime Indicators” contains more detailed records, I only used “Major Crime Indicators” in this paper.
+The dataset named “Police Annual Statistical Report - Reported Crimes” from OpenDataToronto also provides crime data, including crime id, report_year, division, category, subtype and count. However, it overlaps with the information available in “Major Crime Indicators” dataset. Given that “Major Crime Indicators” contains more detailed records, I only used “Major Crime Indicators” in this paper.
 
 ```{r}
 #| include: false
